--- a/Travelwings/pom.xml
+++ b/Travelwings/pom.xml
@@ -39,6 +39,20 @@
     <artifactId>poi-ooxml</artifactId>
     <version>3.17</version>
 </dependency>
+
+<dependency>
+    <groupId>ru.yandex.qatools.ashot</groupId>
+    <artifactId>ashot</artifactId>
+    <version>1.5.2</version>
+</dependency>
+
+   <dependency>
+    <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    <version>1.4</version>
+  </dependency>
+
+
   </dependencies>
   
 <build>
