--- a/Travelwings/pom.xml
+++ b/Travelwings/pom.xml
@@ -57,6 +57,16 @@
   
 <build>
   <plugins>
+      
+      <plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -70,6 +80,9 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+      
+      
+      
  </plugins>
 </build>
   
