--- a/Travelwings/pom.xml
+++ b/Travelwings/pom.xml
@@ -52,6 +52,19 @@
     <version>1.4</version>
   </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.2.0</version>
+</dependency>
+
+<dependency>
+  <groupId>org.slf4j</groupId>
+  <artifactId>slf4j-simple</artifactId>
+  <version>1.7.21</version>
+</dependency>  
+
 
   </dependencies>
   
